Fix formatting on mobile product page

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -16,7 +16,6 @@
 	}
 
 	.buy-button {
-		margin-top: 20px;
 		margin-left: 0px;
 		float: right;
 	}
